minor text changes.

--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 
 amazon_affiliate_redirector.user.js is a user script that will rewrite
-all eligible Amazon.com links such that they include a plugged affiliate
-ID.  Written for my folks so that their son earns a commission on all
-their Amazon.com purchases.
+all eligible Amazon.com links on the fly such that they include a
+plugged affiliate ID.
 
-Fun.
+Written for my folks so that their son earns a commission on all
+their Amazon.com purchases.  Fun.
+
+Feel free to change the ID to the affiliate ID of your choice.
